--- a/index.html
+++ b/index.html
@@ -1,8 +1,99 @@
 <!DOCTYPE html>
 <html>
    <head>
+      <title>10 of My Favorite Funko POP!s</title>
    </head>
    <body>
-      <!-- Write your HTML in this file! -->
+      <header>
+         <h1 id="mainHeading">10 of My Favorite Funko POP!s</h1>
+         <h4>by Zachary Morgan</h4>
+            <nav>
+               <ul>
+                  <li><a href="#eva01">Eva 01 (Bloody/Metallic)</a></li>
+                  <li><a href="#zombie">10" Zombie Black Panther</a></li>
+                  <li><a href="#gator">Alligator Loki</a></li>
+                  <li><a href="#glow">Erik Killmonger as Glow Panther</a></li>
+                  <li><a href="#hunter">The Hunter</a></li>
+                  <li><a href="#demon">Tanjiro Kamado (Constant Flux)</a></li>
+                  <li><a href="#char">10" Charizard</a></li>
+                  <li><a href="#throg">Frog of Thunder</a></li>
+                  <li><a href="#titan">Eren Yaeger (Hardened)</a></li>
+                  <li><a href="#lizard">Neon City Godzilla</a></li>
+               </ul>
+            </nav>
+      </header>
+   
+      <main>
+         <article>
+            <a name="eva01"></a>
+            <h2>Eva 01 (Bloody/Metallic)</h2>
+            <h4>Neon Genesis Evangelion</h4>
+            <p>When the original version of this POP! was released, I was already in love. When I eventually found out about this version, I ordered it the first chance I had. Metallic POP!s are usually pretty cool but the added blood on this made this an awesome representation of one of my favorite anime.</p>
+         </article>
+
+         <article>
+            <a name="zombie"></a>
+            <h2>10" Zombie Black Panther</h2>
+            <h4>Marvel's Black Panther</h4>
+            <p>Though a regular sized (3.5 inch) POP! was planned for release, they were cancelled shortly after the death of Chadwick Boseman. Thankfully the 10" was still released and is great. The black and gold outfit contrasts perfectly while the bones showing and slime are great details courtesy of the Marvel Zombies line.</p>
+         </article>
+
+         <article>
+            <a name="gator"></a>
+            <h2>Alligator Loki</h2>
+            <h4>Marvel's Loki</h4>
+            <p>Being that there are far more two legged POP!s and not as many animals, Alligator Loki is one of the better ones in my opinion. While the POP! might seem cuter than his TV counterpart, both are great versions of one of the more unique Lokis.</p>
+         </article>
+
+         <article>
+            <a name="glow"></a>
+            <h2>Erik Killmonger as Glow Panther</h2>
+            <h4>Marvel's Black Panther</h4>
+            <p>I tried to keep duplicates off of this list but technically, T'Challa (Black Panther) and Killmonger are two different people. Though there are many glow-in-the-dark POP!s, the particular glow and attention to detail on this one certainly make it stand out.</p>
+         </article>
+
+         <article>
+            <a name="hunter"></a>
+            <h2>The Hunter</h2>
+            <h4>Bloodborne</h4>
+            <p>Being that I love Bloodborne and the other Soulsborne games, naturally I am going to love the POP!. I love the attention to detail put into his outfit, as well as his weapons.</p>
+         </article>
+
+         <article>
+            <a name="demon"></a>
+            <h2>Tanjiro Kamado (Constant Flux)</h2>
+            <h4>Demon Slayer</h4>
+            <p>When it was originally released, both Demon Slayer fans and non-fans alike were clamoring over this POP!. The quality of them has certainly gone up over the years but the water swirling around Tanjiro, the dragon head, and glow combined make this one of the best yet.</p>
+         </article>
+
+         <article>
+            <a name="char"></a>
+            <h2>10" Charizard</h2>
+            <h4>Pokémon</h4>
+            <p>While I don't like the look of most of the Pokémon POP!s, the jumbo version of the Charizard POP! is one of my favorites. The size captures the scale of the huge Charizard perfectly and the see-through flame on his tail is a nice touch as well.</p>
+         </article>
+
+         <article>
+            <a name="throg"></a>
+            <h2>Frog of Thunder</h2>
+            <h4>Marvel's Loki</h4>
+            <p>Though being on this list for basically the same reason as Alligator Loki, "Throg" is a better POP! in my opinion because he is also in a container. The container has his variant number on it and is a nice little easter egg from the show.</p>
+         </article>
+
+         <article>
+            <a name="titan"></a>
+            <h2>Eren Yaeger (Hardened)</h2>
+            <h4>Attack On Titan</h4>
+            <p>Similar to the Tanjiro POP!, this one quickly sold out as soon as it went live. It took a lot of refreshing and patience, but eventually I got one! While my dreams of owning all the titan POP!s will probably never come true, having the Female Titan and this one are still awesome in my book.</p>
+         </article>
+
+         <article>
+            <a name="lizard"></a>
+            <h2>Neon City Godzilla</h2>
+            <h4>Godzilla vs. Kong</h4>
+            <p>While this POP! is currently still on my wishlist, I have the 10 inch Godzilla in his normal coloration. As a huge Godzilla fan, these POP!s from the most recent movies are a great representation of this kaiju and certainly more affordable than other figures of this size.</p>
+         </article>
+      </main>
+      <footer>&copy; 2022 Zachary Morgan</footer>
    </body>
 </html>
