--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <a name="demon"></a>
             <h2>Tanjiro Kamado (Constant Flux)</h2>
             <h4>Demon Slayer</h4>
-            <p>When it was originally released, both Demon Slayer fans and non-fans alike were clamoring over this POP!. The quality of them has certainly gone up over the years but the water swirling around Tanjiro, the dragon head, and glow combined make this one of the best yet.</p>
+            <p>When it was originally released, both fans and non-fans alike were clamoring over this POP!. The quality of them has certainly gone up over the years but the water swirling around Tanjiro, the dragon head, and glow combined make this one of the best yet.</p>
          </article>
 
          <article>
